--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         
     <groupId>org.visualdataweb</groupId>
     <artifactId>vowl</artifactId>
-    <version>0.1.4-SNAPSHOT</version>
+    <version>0.1.4</version>
         
         
     <packaging>bundle</packaging>
